Changes since version 2.1.1
---------------------------

- Changed the Ice::Service class on Windows so that service failures
  do not cause the obscure message "Error1: Incorrect function".

- Removed the 64KB packet size limitation for TCP in Windows.

- Changed the C++ translator so that generated code no longer uses
  static function data.

- Fixed a bug in IcePack where stopping a server could hang if the
  server didn't answer the Ice::Process::shutdown() call.

- Changed IceStorm subscriber reaping to release dead subscribers
  more quickly from memory.

- Fixed a bug in IceStorm where the mode (idempotent or nonmutating)
  of the request wasn't correctly forwarded to the subscribers.

- Added IcePack.Registry.AdminIdentity, IcePack.Registry.QueryIdentity
  and IcePack.Registry.LocatorIdentity properties to allow configuring
  the identities of well-known IcePack registry interfaces.

- Added the configuration property Ice.Compression.Level to provide
  more control over the bzip2 algorithm used to compress Ice protocol
  messages.

- Fixed a bug in the Glacier2 router where buffered mode serialized
  twoway requests when it should not.
  
Changes since version 2.1.0
---------------------------

- Fixed bug with the random selection of an endpoint for a proxy with
  multiple endpoints configured. The random number generator used
  by GCC was not being seeded, causing the selection order to always
  be the same.

- Fixed Slice compilers to allow file names containing whitespace.

- Fixed a thread pool bug on Win32 in which the file descriptors for
  the pipe were not closed.

- Fixed a bug in Freeze Maps: you can now add an index to an existing
  Freeze Map.

- Added sequences of fixed-length elements to throughput demo.

- Added RTLD_GLOBAL when calling dlopen on Unix platforms.

- Fixed a bug that could cause an assert if connections could not be
  established in thread-per-connection mode.

- Added two new properties for controlling Active Connection