@@ -7,7 +7,7 @@
 //
 // **********************************************************************
 
-// Generated by makeprops.py from file `../config/PropertyNames.def', Thu Jun  2 15:14:44 2005
+// Generated by makeprops.py from file `../config/PropertyNames.def', Tue Jun 14 10:24:30 2005
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
