@@ -1,6 +1,9 @@
 Changes since version 2.1.1
 ---------------------------
 
+- Removed IceSSL's internal handshake retry loop, along with the
+  related property IceSSL.Client.Handshake.Retries.
+
 - Changed the Ice::Service class on Windows so that service failures
   do not cause the obscure message "Error1: Incorrect function".
 
